<?xml version="1.0" encoding="utf-8"?>
<!-- This file is activity_start -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_toolbar_height"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_talky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_title_talky"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_title_mid"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/size_image_start"
        android:layout_height="@dimen/size_image_start"
        android:layout_marginTop="@dimen/margin_start_chat"
        android:contextClickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        app:srcCompat="@drawable/starting_img" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_google"
        android:layout_width="@dimen/size_logButton_width"
        android:layout_height="@dimen/size_logButton_height"
        android:layout_marginTop="@dimen/margin_top_veryLong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">

        <ImageView
            android:id="@+id/iv_background_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fui_idp_button_background_google" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_google_logo"
                android:layout_width="@dimen/size_auth_logo"
                android:layout_height="@dimen/size_auth_logo"
                android:layout_marginStart="@dimen/margin_start_logButton"
                android:src="@drawable/fui_ic_googleg_color_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_google"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_auth_google"
                android:textAlignment="center"
                android:textAppearance="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
                android:textSize="@dimen/text_size_logButton"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_google_logo"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_facebook"
        android:layout_width="@dimen/size_logButton_width"
        android:layout_height="@dimen/size_logButton_height"
        android:layout_marginTop="@dimen/margin_top_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_google">

        <ImageView
            android:id="@+id/iv_background_facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fui_idp_button_background_facebook" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_facebook_logo"
                android:layout_width="@dimen/size_auth_logo"
                android:layout_height="@dimen/size_auth_logo"
                android:layout_marginStart="@dimen/margin_start_logButton"
                android:src="@drawable/fui_ic_facebook_white_22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_auth_facebook"
                android:textAlignment="center"
                android:textAppearance="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
                android:textSize="@dimen/text_size_logButton"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_facebook_logo"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        android:layout_width="@dimen/size_logButton_width"
        android:layout_height="@dimen/size_logButton_height"
        android:layout_marginTop="@dimen/margin_top_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_facebook">

        <ImageView
            android:id="@+id/iv_background_mail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fui_idp_button_background_email" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_email_logo"
                android:layout_width="@dimen/size_auth_logo"
                android:layout_height="@dimen/size_auth_logo"
                android:layout_marginStart="@dimen/margin_start_logButton"
                android:src="@drawable/fui_ic_mail_white_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_auth_email"
                android:textAppearance="@style/FirebaseUI.Button.AccountChooser.EmailButton"
                android:textSize="@dimen/text_size_logButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_email_logo"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>